# Blades-of-Exile

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml  msvc.yml
include/boe/: adventurers.hpp  compatibility.hpp  dump_game_structures.hpp  endian_adjust.hpp  game_file_structures.hpp  hacks.hpp  item.hpp  item_source.hpp  pc.hpp  registration.hpp  savedata_serialization.hpp  scenario.hpp  spell.hpp  utility.hpp
src/: CMakeLists.txt
src/Macintosh Code Release 3/: Exile.sound.cpp  Global.h  bldsexil.cpp  bldsexil.h  blx.g.utils.cpp  blx.g.utils.h  blxactions.cpp  blxactions.h  blxfileio.cpp  blxfileio.h  blxgraphics.cpp  blxgraphics.h  blxtown_spec.cpp  combat.cpp  dialogutils.cpp  dlogtool.cpp  dlogtool.h  fields.cpp  fields.h  global.cpp  info.dialogs.cpp  info.dialogs.h  item_data.cpp  item_data.h  items.cpp  items.h  loc_utils.cpp  loc_utils.h  monster.cpp  monster.h  newgraph.cpp  newgraph.h  party.cpp  party.h  specials.cpp  startup.cpp  text.cpp  text.h  town.cpp  town.h
src/Macintosh Code Release 3/Blades of Exile Char Editor/: char.ed.cpp  dlogtool.cpp  dlogtool.h  ed.action.cpp  ed.editors.cpp  ed.editors.h  ed.fileio.cpp  ed.global.cpp  ed.global.h  ed.graphics.cpp  ed.graphics.h  ed.sound.cpp
src/Macintosh Code Release 3/Scenario Editor/: Exiletedit.cpp  Global.h  buttonmg.cpp  dlogtool.cpp  dlogtool.h  global.cpp  keydlgs.cpp  keydlgs.h  scenario.cpp  scenario.h  sound.cpp  tGraphics.cpp  tGraphics.h  tactions.cpp  tactions.h  tfileio.cpp  tfileio.h  townout.cpp
src/Windows Code Release 3/: BLADES.RC  BLADHELP.HLP  CMakeLists.txt  Global.h  actions.cpp  actions.h  blades.cpp  combat.cpp  combat.h  dlgutils.cpp  dlgutils.h  dlogtool.cpp  dlogtool.h  dlogtool_helpers.hpp  dump_game_structures.cpp  dump_game_structures.hpp  endian_adjust.cpp  exlsound.cpp  exlsound.h  fields.cpp  fields.h  fileio.cpp  fileio.h  game_file_structures.hpp  game_globals.cpp  game_globals.hpp  gdi_helpers.cpp  gdi_helpers.hpp  global.cpp  global.h  global_structs.hpp  graphics.cpp  graphics.h  graphutl.cpp  graphutl.h  graphutl_helpers.hpp  gutils.cpp  gutils.h  infodlgs.cpp  infodlgs.h  (+29 more)
src/Windows Code Release 3/BLADSCEN/: stealth.exs  valleydy.exs  valleydy_demo.exs  zakhazi.exs
src/Windows Code Release 3/Dump Savegame/: CMakeLists.txt  dump_savegame.cpp  dump_savegame.hpp
src/Windows Code Release 3/Dump Scenario/: CMakeLists.txt  dump_scenario.cpp  dump_scenario.hpp  dump_scenario_cli.cpp
src/Windows Code Release 3/PC editor/: BLADPCED.RC  CMakeLists.txt  bladpced.cpp  dlogtool.cpp  dlogtool.h  edaction.cpp  edfileio.cpp  edfileio.h  editors.cpp  editors.h  edsound.cpp  global.cpp  graphics.cpp  graphics.h  graphutl.cpp  graphutl.h  itemdata.h
src/Windows Code Release 3/Scen Ed/: BLSCENED_OLD.RC  CMakeLists.txt  GAMEDLOG.RC  bladbase.exs  bladbase_registered.exs  bladdata.bld  bladedit.hlp  blscened.cpp  buttonmg.cpp  buttonmg.h  dlogtool.cpp  dlogtool.h  edsound.cpp  global.cpp  global.h  graphics.cpp  graphics.h  graphutl.cpp  graphutl.h  keydlgs.cpp  keydlgs.h  scenario.cpp  scenario.h  scened_globals.cpp  tactions.cpp  tactions.h  tfileio.cpp  tfileio.h  townout.cpp  townout_stub.cpp
src/Windows Code Release 3/Utilities/: CMakeLists.txt  dump_scenario.cpp  endian_adjust.cpp  endian_adjust.hpp
src/boe/: CMakeLists.txt  adventurers.cpp  dump_game_structures.cpp  endian_adjust.cpp  game_file_structures.cpp  item.cpp  item_source.cpp  pc.cpp  registration.cpp  savedata_serialization.cpp  scenario.cpp  scenario_extra.cpp  spell.cpp  utility.cpp
src/utilities/: CMakeLists.txt
src/utilities/Dump Savegame/: CMakeLists.txt  dump_savegame.cpp  dump_savegame.hpp  dump_savegame_cli.cpp
src/utilities/Dump Scenario/: CMakeLists.txt  dump_scenario.cpp  dump_scenario.hpp  dump_scenario_cli.cpp
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  test_adventurers.cpp  test_pc.cpp
